# s3_data_packer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: Lint.yml  run-tests.yml
chunked_examples/: Create_fake_dataset.ipynb  Test_packing_with_S3BigDataPacker.ipynb  big_packing_example.py
githooks/: pre-commit
s3_data_packer/: S3DataPacker.py  S3OutputStore.py  S3TableStore.py  constants.py  helpers.py  s3_data_packer.py  s3_output_store.py  s3_table_store.py
tests/: helpers.py  test_S3DataPacker.py  test_package_version.py  test_packer_end_to_end.py  test_s3_data_packer_functions.py  test_s3_store.py  test_test_lol.py
tests/DataPacker/: DataPacker_individual_tests.py
tests/data/: all_types.jsonl  all_types.snappy.parquet  all_types_one_line.csv
tests/data/append_files/input_scenario_1/: appended_output.snappy.parquet
tests/data/append_files/input_scenario_2/: appended_output.snappy.parquet
tests/data/get_chunk_increments/: all_types_x12.csv
tests/data/input_scenario_3/: appended_output.snappy.parquet
