[tool.poetry]
name = "s3store"
version = "0.0.1"
description = ""
authors = ["s-ducks <stephen.bias@digital.justice.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
dataengineeringutils3 = "^1.2.1"
arrow-pd-parser = "^1.0.2"
awswrangler = "^2.11.0"
mojap-metadata = "^1.2.2"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
moto = "^2.2.6"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
