[tool.poetry]
name = "s3_data_packer"
version = "0.0.2"
description = ""
authors = [
    "s-ducks <stephen.bias@digital.justice.gov.uk>",
    "dataengineering <dataengineering@digital.justice.gov.uk>",
    "danjiv <danjiv.ramkhalawon@digital.justice.gov.uk>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
dataengineeringutils3 = "^1.2.1"
arrow-pd-parser = "^1.0.3"
awswrangler = "^2.11.0"
mojap-metadata = "^1.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
moto = "^2.2.6"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
